--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "^5.56.2",
+    "@vueuse/head": "^2.0.0",
     "axios": "^1.7.7",
     "pinia": "^2.1.7",
     "sass": "^1.77.8",
